--- a/.github/workflows/AutoBuild-p2w_r619ac-128m.yml
+++ b/.github/workflows/AutoBuild-p2w_r619ac-128m.yml
@@ -54,7 +54,7 @@ env:
 
 jobs:
   Compile:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     permissions:
       issues: write
       pull-requests: write
