--- a/.github/workflows/AutoBuild-xiaomi_mi-router-4a-gigabit.yml
+++ b/.github/workflows/AutoBuild-xiaomi_mi-router-4a-gigabit.yml
@@ -54,7 +54,7 @@ env:
 
 jobs:
   Compile:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     permissions:
       issues: write
       pull-requests: write
