--- a/.github/workflows/X-x86_64_X_Mine.yml
+++ b/.github/workflows/X-x86_64_X_Mine.yml
@@ -85,7 +85,7 @@ jobs:
 
         if [ "${{ env.DELETE_USELESS_FILES }}" == true ]
         then
-            docker rmi node:18 node:18-alpine node:16-alpine alpine:3.16 alpine:3.17 alpine:3.18 moby/buildkit:latest node:16 ubuntu:20.04 debian:9 debian:10 debian:11
+            docker rmi node:18 node:20 node:22 node:18-alpine node:20-alpine node:22-alpine alpine:3.16 alpine:3.17 alpine:3.18 moby/buildkit:latest ubuntu:20.04 debian:10 debian:11
             sudo rm -rf /usr/share/dotnet /etc/mysql /etc/php
             sudo -E apt-get -y autoremove --purge
             sudo -E apt-get clean
