--- a/.github/workflows/X-x86_64_X_Mine.yml
+++ b/.github/workflows/X-x86_64_X_Mine.yml
@@ -207,7 +207,8 @@ jobs:
         ln -s ../../../package/other/AutoBuild-Packages/adguardhome package/feeds/packages/adguardhome
         # 2024.03.03 mosdns build fail by golang 1.22
         sed -i 's/CGO_ENABLED=0/CGO_ENABLED=1/g' feeds/packages/net/mosdns/Makefile
-        make -j$(($(nproc) + 1)) | tee ./build_log.log || make -j1 V=s
+        # make -j$(($(nproc) + 1)) | tee ./build_log.log || make -j1 V=s
+        make -j$(($(nproc) + 1)) || make -j1 V=s
         [ "$?" == 0 ] && echo "Result=true" >> $GITHUB_ENV || echo "Result=false" >> $GITHUB_ENV
 
 
