delete image upload

--- a/.github/workflows/X-x86_64_Z_Mine_home.yml
+++ b/.github/workflows/X-x86_64_Z_Mine_home.yml
@@ -201,36 +201,10 @@ jobs:
         rm package/feeds/packages/adguardhome -rf
         rm feeds/packages/net/adguardhome -rf
         ln -s ../../../package/other/AutoBuild-Packages/adguardhome package/feeds/packages/adguardhome
-        make -j$(($(nproc) + 1)) ||  make -j1 V=s
+        make -j$(($(nproc) + 1)) || lscpu
         # 2024.03.03 mosdns build fail by golang 1.22
         sed -i 's/CGO_ENABLED=0/CGO_ENABLED=1/g' feeds/packages/net/mosdns/Makefile
         [ "$?" == 0 ] && echo "Result=true" >> $GITHUB_ENV || echo "Result=false" >> $GITHUB_ENV
-
-    - name: Check Build Update
-      run: |
-        export NOW_DATA_VERSION=${{env.NOW_DATA_VERSION}}
-        export GITHUB_WORKSPACE=$GITHUB_WORKSPACE
-        bash $GITHUB_WORKSPACE/Scripts/AutoBuild_Upcheck.sh ${{env.Tempoary_FLAG}}
-  
-    - name: Upload Package Version to Github Release
-      uses: svenstaro/upload-release-action@v2
-      if: env.Release=='true' && env.UPLOAD_RELEASES == 'true' && env.Result == 'true' && !cancelled()
-      with:
-        repo_token: ${{ secrets.GITHUB_TOKEN }}
-        file: ${{env.Tempoary_FLAG}}_build_pkg_ver.log
-        file_glob: true
-        tag: v${{ steps.date.outputs.date }}
-        overwrite: true
-  
-    - name: Upload Package Update to Github Release
-      uses: svenstaro/upload-release-action@v2
-      if: env.Release=='true' && env.UPLOAD_RELEASES == 'true' && env.Result == 'true' && !cancelled()
-      with:
-        repo_token: ${{ secrets.GITHUB_TOKEN }}
-        file: ${{env.Tempoary_FLAG}}_build_pkg_up.log 
-        file_glob: true
-        tag: v${{ steps.date.outputs.date }}
-        overwrite: true
 
     - name: Process Firmware
       if: env.Result == 'true' && !cancelled()
@@ -239,169 +213,6 @@ jobs:
         source $GITHUB_WORKSPACE/Scripts/AutoBuild_Function.sh
         Firmware_Diy_End
 
-    - name: Upload Firmware to Artifacts
-      uses: actions/upload-artifact@main
-      if: env.UPLOAD_ARTIFACTS == 'true' && env.Result == 'true' && !cancelled()
-      with:
-        name: ${{ env.CONFIG_FILE }}_firmware_${{ env.Compile_Date }}
-        path: openwrt/bin/Firmware
-
-    - name: Upload bin to Artifacts
-      uses: actions/upload-artifact@main
-      if: env.UPLOAD_BIN_ARTIFACTS == 'true' && env.Result == 'true' && !cancelled()
-      with:
-        name: ${{ env.CONFIG_FILE }}_bin_${{ env.Compile_Date }}
-        path: openwrt/bin
-
-    - name: Download Github Release API
-      if: env.UPLOAD_RELEASES == 'true' && env.Result == 'true' && !cancelled()
-      run: |
-        wget https://api.github.com/repos/${{github.repository}}/releases/tags/AutoUpdate -O API
-        SP_UEFI_IMG_GZ=openwrt/bin/Firmware/AutoBuild-*-UEFI-*.img.gz
-        SP_UEFI_IMG_GZ=$(echo $SP_UEFI_IMG_GZ)
-        SP_UEFI_IMG_GZ=${SP_UEFI_IMG_GZ##*/}
-        SP_UEFI_VMDK=openwrt/bin/Firmware/AutoBuild-*-UEFI-*.vmdk
-        SP_UEFI_VMDK=$(echo $SP_UEFI_VMDK)
-        SP_UEFI_VMDK=${SP_UEFI_VMDK##*/}
-        SP_UEFI_VDI=openwrt/bin/Firmware/AutoBuild-*-UEFI-*.vdi
-        SP_UEFI_VDI=$(echo $SP_UEFI_VDI)
-        SP_UEFI_VDI=${SP_UEFI_VDI##*/}
-        SP_UEFI_VHDX=openwrt/bin/Firmware/AutoBuild-*-UEFI-*.vhdx
-        SP_UEFI_VHDX=$(echo $SP_UEFI_VHDX)
-        SP_UEFI_VHDX=${SP_UEFI_VHDX##*/}
-        SP_LEGACY_IMG_GZ=openwrt/bin/Firmware/AutoBuild-*-BIOS-*.img.gz
-        SP_LEGACY_IMG_GZ=$(echo $SP_LEGACY_IMG_GZ)
-        SP_LEGACY_IMG_GZ=${SP_LEGACY_IMG_GZ##*/}
-        SP_LEGACY_VMDK=openwrt/bin/Firmware/AutoBuild-*-BIOS-*.vmdk
-        SP_LEGACY_VMDK=$(echo $SP_LEGACY_VMDK)
-        SP_LEGACY_VMDK=${SP_LEGACY_VMDK##*/}
-        SP_LEGACY_VDI=openwrt/bin/Firmware/AutoBuild-*-BIOS-*.vdi
-        SP_LEGACY_VDI=$(echo $SP_LEGACY_VDI)
-        SP_LEGACY_VDI=${SP_LEGACY_VDI##*/}
-        SP_LEGACY_VHDX=openwrt/bin/Firmware/AutoBuild-*-BIOS-*.vhdx
-        SP_LEGACY_VHDX=$(echo $SP_LEGACY_VHDX)
-        SP_LEGACY_VHDX=${SP_LEGACY_VHDX##*/}
-        echo SP_UEFI_IMG_GZ=$(echo $SP_UEFI_IMG_GZ) >> $GITHUB_ENV
-        echo SP_UEFI_VMDK=$(echo $SP_UEFI_VMDK) >> $GITHUB_ENV
-        echo SP_UEFI_VDI=$(echo $SP_UEFI_VDI) >> $GITHUB_ENV
-        echo SP_UEFI_VHDX=$(echo $SP_UEFI_VHDX) >> $GITHUB_ENV
-        echo SP_LEGACY_IMG_GZ=$(echo $SP_LEGACY_IMG_GZ) >> $GITHUB_ENV
-        echo SP_LEGACY_VMDK=$(echo $SP_LEGACY_VMDK) >> $GITHUB_ENV
-        echo SP_LEGACY_VDI=$(echo $SP_LEGACY_VDI) >> $GITHUB_ENV
-        echo SP_LEGACY_VHDX=$(echo $SP_LEGACY_VHDX) >> $GITHUB_ENV
-
-    - name: 1 Upload SP_UEFI_IMG_GZ to SharePoint
-      uses: su-dont/share-point-uploader@v2.1
-      if: env.SharePoint=='true' && !cancelled() && env.Result == 'true'
-      with:
-        sp_url: https://xinbyte.sharepoint.com/:f:/r/sites/OpenWrt
-        sp_username: ${{ secrets.USERNAME }}
-        sp_password: ${{ secrets.PASSWORD }}
-        sp_folder: /Shared Documents/OpenWrt/${{ steps.date.outputs.date }}
-        sp_file_name: ${{ env.SP_UEFI_IMG_GZ }}
-        file: openwrt/bin/Firmware/${{ env.SP_UEFI_IMG_GZ }}
-
-    - name: 2 Upload SP_UEFI_VMDK to SharePoint
-      uses: su-dont/share-point-uploader@v2.1
-      if: env.SharePoint=='true' && !cancelled() && env.Result == 'true'
-      with:
-        sp_url: https://xinbyte.sharepoint.com/:f:/r/sites/OpenWrt
-        sp_username: ${{ secrets.USERNAME }}
-        sp_password: ${{ secrets.PASSWORD }}
-        sp_folder: /Shared Documents/OpenWrt/${{ steps.date.outputs.date }}
-        sp_file_name: ${{ env.SP_UEFI_VMDK }}
-        file: openwrt/bin/Firmware/${{ env.SP_UEFI_VMDK }}
-
-    # - name: 3 Upload SP_UEFI_VDI to SharePoint
-    #   uses: su-dont/share-point-uploader@v2.1
-    #   if: env.SharePoint=='true' && !cancelled() && env.Result == 'true'
-    #   with:
-    #     sp_url: https://xinbyte.sharepoint.com/:f:/r/sites/OpenWrt
-    #     sp_username: ${{ secrets.USERNAME }}
-    #     sp_password: ${{ secrets.PASSWORD }}
-    #     sp_folder: /Shared Documents/OpenWrt/${{ steps.date.outputs.date }}
-    #     sp_file_name: ${{ env.SP_UEFI_VDI }}
-    #     file: openwrt/bin/Firmware/${{ env.SP_UEFI_VDI }}
-
-    # - name: 4 Upload SP_UEFI_VHDX to SharePoint
-    #   uses: su-dont/share-point-uploader@v2.1
-    #   if: env.SharePoint=='true' && !cancelled() && env.Result == 'true'
-    #   with:
-    #     sp_url: https://xinbyte.sharepoint.com/:f:/r/sites/OpenWrt
-    #     sp_username: ${{ secrets.USERNAME }}
-    #     sp_password: ${{ secrets.PASSWORD }}
-    #     sp_folder: /Shared Documents/OpenWrt/${{ steps.date.outputs.date }}
-    #     sp_file_name: ${{ env.SP_UEFI_VHDX }}
-    #     file: openwrt/bin/Firmware/${{ env.SP_UEFI_VHDX }}
-
-    - name: 5 Upload SP_LEGACY_IMG_GZ to SharePoint
-      uses: su-dont/share-point-uploader@v2.1
-      if: env.SharePoint=='true' && !cancelled() && env.Result == 'true'
-      with:
-        sp_url: https://xinbyte.sharepoint.com/:f:/r/sites/OpenWrt
-        sp_username: ${{ secrets.USERNAME }}
-        sp_password: ${{ secrets.PASSWORD }}
-        sp_folder: /Shared Documents/OpenWrt/${{ steps.date.outputs.date }}
-        sp_file_name: ${{ env.SP_LEGACY_IMG_GZ }}
-        file: openwrt/bin/Firmware/${{ env.SP_LEGACY_IMG_GZ }}
-
-    - name: 6 Upload SP_LEGACY_VMDK to SharePoint
-      uses: su-dont/share-point-uploader@v2.1
-      if: env.SharePoint=='true' && !cancelled() && env.Result == 'true'
-      with:
-        sp_url: https://xinbyte.sharepoint.com/:f:/r/sites/OpenWrt
-        sp_username: ${{ secrets.USERNAME }}
-        sp_password: ${{ secrets.PASSWORD }}
-        sp_folder: /Shared Documents/OpenWrt/${{ steps.date.outputs.date }}
-        sp_file_name: ${{ env.SP_LEGACY_VMDK }}
-        file: openwrt/bin/Firmware/${{ env.SP_LEGACY_VMDK }}
-
-    # - name: 7 Upload SP_LEGACY_VDI to SharePoint
-    #   uses: su-dont/share-point-uploader@v2.1
-    #   if: env.SharePoint=='true' && !cancelled() && env.Result == 'true'
-    #   with:
-    #     sp_url: https://xinbyte.sharepoint.com/:f:/r/sites/OpenWrt
-    #     sp_username: ${{ secrets.USERNAME }}
-    #     sp_password: ${{ secrets.PASSWORD }}
-    #     sp_folder: /Shared Documents/OpenWrt/${{ steps.date.outputs.date }}
-    #     sp_file_name: ${{ env.SP_LEGACY_VDI }}
-    #     file: openwrt/bin/Firmware/${{ env.SP_LEGACY_VDI }}
-
-    # - name: 8 Upload SP_LEGACY_VHDX to SharePoint
-    #   uses: su-dont/share-point-uploader@v2.1
-    #   if: env.SharePoint=='true' && !cancelled() && env.Result == 'true'
-    #   with:
-    #     sp_url: https://xinbyte.sharepoint.com/:f:/r/sites/OpenWrt
-    #     sp_username: ${{ secrets.USERNAME }}
-    #     sp_password: ${{ secrets.PASSWORD }}
-    #     sp_folder: /Shared Documents/OpenWrt/${{ steps.date.outputs.date }}
-    #     sp_file_name: ${{ env.SP_LEGACY_VHDX }}
-    #     file: openwrt/bin/Firmware/${{ env.SP_LEGACY_VHDX }}
-
-    - name: Delete VM Disk File
-      if: env.Release=='true' && env.UPLOAD_RELEASES == 'true' && env.Result == 'true' && !cancelled()
-      run: |
-        rm openwrt/bin/Firmware/AutoBuild-*.v* -rf
-
-    - name: Upload Firmware to Github Release
-      uses: svenstaro/upload-release-action@v2
-      if: env.Release=='true' && env.UPLOAD_RELEASES == 'true' && env.Result == 'true' && !cancelled()
-      with:
-        repo_token: ${{ secrets.GITHUB_TOKEN }}
-        file: openwrt/bin/Firmware/*
-        file_glob: true
-        tag: AutoUpdate
-        overwrite: true
-
-    - name: Upload API to Github Release
-      if: env.Release=='true' && env.UPLOAD_RELEASES == 'true' && env.Result == 'true' && !cancelled()
-      uses: svenstaro/upload-release-action@v2
-      with:
-        repo_token: ${{ secrets.GITHUB_TOKEN }}
-        file: ./API
-        file_glob: true
-        tag: AutoUpdate
-        overwrite: true
 
     - name: Delete old Workflow Runs
       uses: GitRML/delete-workflow-runs@main
