--- a/.github/workflows/X-x86_64_Z_Mine_home.yml
+++ b/.github/workflows/X-x86_64_Z_Mine_home.yml
@@ -41,7 +41,7 @@ on:
 ### 环境变量设置
 env:
 # 编译时调用的 [.config] 文件名称
-  CONFIG_FILE: x86_64-Z
+  CONFIG_FILE: x86_64-Z-Test
 # 源码仓库:分支
   DEFAULT_SOURCE: coolsnowwolf/lede:master
 # 上传固件到 Github Releases
